# fur_eco_contracts

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  program-id.json
app/furb_client/: client.ts
fur_eco_contract/: Cargo.toml
fur_eco_contract/src/: lib.rs
fur_eco_contract/src/instructions/: furb.rs  furft_mechanics.rs  marketplace.rs  mod.rs  pet_evolution.rs  staking.rs  token_conversion.rs
fur_eco_contract/src/state/: mod.rs  pet.rs  tokens.rs
programs/fur_eco_contract/: Cargo.toml
programs/fur_eco_contract/src/: lib.rs
programs/fur_eco_contract/src/instructions/: furb.rs  mod.rs
programs/fur_eco_contract/src/state/: marketplace.rs  mod.rs
programs/furb/: Cargo.toml
programs/furb/src/: lib.rs
tests/: fur_eco_contract.ts
