[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version ="0.30.1",features = ["init-if-needed"]}
anchor-spl = "0.30.1"
solana-program = "2.2.1"
spl-token = "7.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
